@@ -1,13 +1,13 @@
 ## Process this file with automake to create Makefile.in
 
-noinst_LIBRARIES = sys
+noinst_LIBRARIES = libsys.a
 
 EXTRA_DIST = alloca.c basename.c dirname.c error.c fnmatch.c getopt.c \
 	getopt1.c memcpy.c memset.c obstack.c regex.c rx.c \
 	strcasecmp.c strcspn.c strdup.c strndup.c strpbrk.c strspn.c \
 	strstr.c strtok.c
 
-sys_SOURCES = xgetcwd.c xmalloc.c
+libsys_a_SOURCES = xgetcwd.c xmalloc.c
 
 noinst_HEADERS = ansidecl.h error.h fnmatch.h getopt.h obstack.h \
 	pathmax.h regex.h rx.h xalloca.h xdirent.h xfnmatch.h \
@@ -19,4 +19,4 @@ INCLUDES = -I. -I$(srcdir) \
 	   -I../intl -I$(top_srcdir)/intl \
 	   -I.. -I$(top_srcdir) 
 DEFS = -DLOCALEDIR=\"$(localedir)\" @DEFS@
-sys_LIBADD = @REGEXOBJ@ @LIBOBJS@ @ALLOCA@
+libsys_a_LIBADD = @REGEXOBJ@ @LIBOBJS@ @ALLOCA@
