@@ -2,9 +2,9 @@
 
 AUTOMAKE_OPTIONS = ansi2knr
 
-noinst_LIBRARIES = idu
+noinst_LIBRARIES = libidu.a
 
-idu_SOURCES = dynvec.c hash.c idfile.c idread.c idwrite.c fnprint.c \
+libidu_a_SOURCES = dynvec.c hash.c idfile.c idread.c idwrite.c fnprint.c \
 	scanners.c walker.c
 
 idudir = $(prefix)/share
