@@ -1,5 +1,8 @@
 1998-11-18  Greg McGary  <gkm@gnu.org>
 
+	* configure.in, lib/Makefile.am, libidu/Makefile.am:
+	Conform macro names to automake-1.3 conventions.
+
 	* libidu/scanners.c (id_0): Increase size and make file static.
 
 Tue Aug  6 22:46:16 1996  Greg McGary  <gkm@g2>
